Fix font-size for panels, which was too small on smaller screens.

--- a/public/global.css
+++ b/public/global.css
@@ -145,7 +145,7 @@ section {
 
 .panel h2 {
     border-bottom: 0.4vmin solid black;
-    font-size: 2vmin;
+    font-size: 1.2rem;
     font-weight: bold;
     margin: 0;
     padding: 1vmin 0;
